# bkr-compound

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  alembic.ini  claude-code-master-prompt.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_data_layer.py  0003_portfolio_risk.py  0004_signals_alerts.py  0005_webapp.py  0006_evaluation.py  0007_universe_discovery.py
config/: models.yaml  universe_sp500.csv
docker/: api.Dockerfile  frontend-dev.Dockerfile
docs/: PRODUCTION_CHECKLIST.md  PROGRESS.md  SETUP.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
scripts/: backup.ps1  backup.sh
sentinel/: __init__.py  config.py
sentinel/agents/: analysts.py  chat.py  regime.py  screener.py  technicals.py  verdicts.py
sentinel/alerts/: briefs.py  format.py  router.py  telegram.py
sentinel/api/: auth.py  main.py  middleware.py  ws.py
sentinel/data/: bus.py  context.py  discovery.py  ingest.py  market_hours.py  rate_limit.py  universe.py  watchdog.py
sentinel/db/: base.py  (+2 more)
tests/: conftest.py  synth.py  test_alerts.py  test_analysts.py  test_api_providers.py  test_config.py  test_credentials.py  test_discovery.py  test_evaluation.py  test_health.py  test_llm_budget.py  test_middleware.py  test_pipeline.py  test_portfolio_api.py  test_providers.py  test_rate_limit.py  test_regime.py  test_risk_engine.py  test_scheduler.py  test_screener.py  test_signals_api.py  test_sizing.py  test_strategies.py  test_technicals.py  test_universe.py  test_watchdog.py  test_webapp_api.py
(+55 files in other folders)
