[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "b-quant"
version = "0.1.0"
description = "B-Quant: personal AI-agentic stock analysis and trade-recommendation platform. Informational only — never executes trades."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "apscheduler>=3.10,<4",
    "httpx>=0.27",
    "langgraph>=0.2",
    "litellm>=1.48",
    "python-telegram-bot>=21.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "pandas-market-calendars>=4.4",
    "cryptography>=43.0",
    "structlog>=24.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
    "freezegun>=1.5",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
include = ["sentinel*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: `Depends(...)` in defaults is the standard FastAPI dependency idiom.
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["sentinel"]
branch = true
